--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,32 @@
           </button>
         </div>
       </div>
-      <div class="excel__toolbar"></div>
+      <div class="excel__toolbar">
+        <div class="btn">
+          <i class="material-icons">format_align_left</i>
+        </div>
+
+        <div class="btn">
+          <i class="material-icons">format_align_center</i>
+        </div>
+
+        <div class="btn">
+          <i class="material-icons">format_align_right</i>
+        </div>
+
+        <div class="btn">
+          <i class="material-icons">format_bold</i>
+        </div>
+
+        <div class="btn">
+          <i class="material-icons">format_italic</i>
+        </div>
+
+        <div class="btn">
+          <i class="material-icons">format_underlined</i>
+        </div>
+
+      </div>
       <div class="excel__formula"></div>
       <div class="excel__table"></div>
     </div>
