--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,71 @@
         <div class="info">fx</div>
         <div class="input" contenteditable spellcheck="false"></div>
       </div>
-      <div class="excel__table"></div>
+      <div class="excel__table">
+        <div class="row">
+          <div class="row-info"></div>
+          <div class="row-data">
+            <div class="column">A</div>
+            <div class="column">B</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+            <div class="column">C</div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="row-info">1</div>
+          <div class="row-data">
+            <div class="cell selected" contenteditable="">1</div>
+            <div class="cell">2</div>
+            <div class="cell">3</div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
