--- a/src/index.html
+++ b/src/index.html
@@ -11,117 +11,25 @@
 </head>
 
 <body>
-  <div id="app" class="container">
-    <div class="excel">
-      <div class="excel__header">
-        <input class="input" type="text" value="New table">
-
-        <div>
-          <button class="btn">
-            <i class="material-icons">
-              delete
-            </i>
-          </button>
-          <button class="btn">
-            <i class="material-icons">
-              exit_to_app
-            </i>
-          </button>
-        </div>
+  <div id="app">
+    <div class="db">
+      <div class="db__header">
+        <h1>Excel Dashboard</h1>
       </div>
-      <div class="excel__toolbar">
-        <div class="btn">
-          <i class="material-icons">format_align_left</i>
-        </div>
-
-        <div class="btn">
-          <i class="material-icons">format_align_center</i>
-        </div>
-
-        <div class="btn">
-          <i class="material-icons">format_align_right</i>
-        </div>
-
-        <div class="btn">
-          <i class="material-icons">format_bold</i>
-        </div>
-
-        <div class="btn">
-          <i class="material-icons">format_italic</i>
-        </div>
-
-        <div class="btn">
-          <i class="material-icons">format_underlined</i>
-        </div>
-
+      <div class="db__new">
+        <a href="#" class="db__create">New table</a>
       </div>
-      <div class="excel__formula">
-        <div class="info">fx</div>
-        <div class="input" contenteditable spellcheck="false"></div>
-      </div>
-      <div class="excel__table">
-        <div class="row">
-          <div class="row-info"></div>
-          <div class="row-data">
-            <div class="column">A</div>
-            <div class="column">B</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-            <div class="column">C</div>
-          </div>
+      <div class="db__table db__view">
+        <div class="db__list-header">
+          <span>Name</span>
+          <span>Date of opening</span>
         </div>
-        <div class="row">
-          <div class="row-info">1</div>
-          <div class="row-data">
-            <div class="cell selected" contenteditable="">1</div>
-            <div class="cell">2</div>
-            <div class="cell">3</div>
-          </div>
+
+        <div class="db__list">
+          <li class="db__record">
+            <a href="#">Table number 1</a>
+            <strong>13.07.2022</strong>
+          </li>
         </div>
       </div>
     </div>
