--- a/src/index.html
+++ b/src/index.html
@@ -11,29 +11,7 @@
 </head>
 
 <body>
-  <div id="app">
-    <div class="db">
-      <div class="db__header">
-        <h1>Excel Dashboard</h1>
-      </div>
-      <div class="db__new">
-        <a href="#" class="db__create">New table</a>
-      </div>
-      <div class="db__table db__view">
-        <div class="db__list-header">
-          <span>Name</span>
-          <span>Date of opening</span>
-        </div>
-
-        <div class="db__list">
-          <li class="db__record">
-            <a href="#">Table number 1</a>
-            <strong>13.07.2022</strong>
-          </li>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div id="app"></div>
 </body>
 
 </html>
